@@ -1,0 +1,62 @@
+#!/bin/sh
+# $Revision$
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are met:
+#
+# * Redistributions of source code must retain the above copyright notice, this
+# list of conditions and the following disclaimer.
+# * Redistributions in binary form must reproduce the above copyright notice,
+# this list of conditions and the following disclaimer in the documentation
+# and/or other materials provided with the distribution.
+# * Neither the name of the Nth Dimension nor the names of its contributors may
+# be used to endorse or promote products derived from this software without
+# specific prior written permission.
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+# POSSIBILITY OF SUCH DAMAGE.
+#
+# (c) Tim Brown, 2015
+# <mailto:timb@nth-dimension.org.uk>
+# <http://www.nth-dimension.org.uk/> / <http://www.machine.org.uk/>
+#
+# Dump unprotected files
+
+. lib/misc/stdio
+. lib/misc/file
+
+file_unprotected_init() {
+	stdio_message_log "file_unprotected" "Starting at: $(date)"
+}
+
+file_unprotected_main() {
+	file_list_by_protection "(null)" | while read filename
+	do
+		stdio_message_warn "file_unprotected" "${filename} may not be protected (when unlocked (depends on iOS version))"
+	done
+	file_list_by_protection "NSFileProtectionNone" | while read filename
+	do
+		stdio_message_warn "file_unprotected" "${filename} is unprotected"
+	done
+	file_list_by_protection "NSFileProtectionCompleteUntilFirstUserAuthentication" | while read filename
+	do
+		stdio_message_warn "file_unprotected" "${filename} is unprotected after first unlock"
+	done
+	file_list_by_protection "NSFileProtectionCompleteUnlessOpen" | while read filename
+	do
+		stdio_message_warn "file_unprotected" "${filename} is unprotected when unlocked"
+	done
+}
+
+file_unprotected_fini() {
+	stdio_message_log "file_unprotected" "Ending at: $(date)"
+}
