@@ -20,6 +20,7 @@
 * Updated tools/generate_docs.sh to deal with classdump_matches_api
 * Updated tools/generate_docs.sh to dump all messages
 * Updated iaa.sh to support a private repo in preparation for public release
+* Added tools/dump_fileprotection and added file_protection to use it
 
 0.0 - 0.1
 
